# Lambda-Cntr

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.pts  README.md  cntr.yaml  evaluate.py  lambda-cntr
evaluation/: evaluate.py  helper.py  measure-memory.py  measure-startup.py
src/: json_builder.rs  kube_controller.rs  lib.rs  pod_shell.rs
